<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">java5775_5366_9373</string>
    <string name="wellcome">ברוכים הבאים לאפליקציה</string>
    <string name="action_settings">הגדרות</string>
    <string name="docNum">מספר רופא</string>
    <string name="docPass">סיסמה</string>
    <string name="loginButtonText">התחבר</string>
    <string name="mainMenuStartTreatment">התחל טיפול</string>
    <string name="title_activity_menu">תפריט ראשי</string>
    <string name="title_activity_patient_list">רשימת פציינטים</string>
    <string name="title_activity_medicine_list">רשימת תרופות</string>
    <string name="title_activity_allergy_list">רשימת אלרגיות</string>
    <string name="title_activity_treatment">TreatmentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="StartTreat">רישום טיפול</string>
    <string name="DocName">שם רופא</string>
    <string name="EnterIdPatient">ת ז של החולה</string>
    <string name="mainMenuSlidingDrawerHandle">רשימות←</string>
    <string name="allergy_number">"מספר אלרגיה: "</string>
    <string name="name">"שם: "</string>
    <string name="allergy_details">הערות:</string>
    <string name="back_button">חזור</string>
    <string name="medicine_number">מספר תרופה:</string>
    <string name="medicine_type">סוג:</string>
    <string name="medicine_active_ingredients">רכיבים פעילים:</string>
    <string name="medicine_ingredients">רכיבים:</string>
    <string name="show_allergies">הצג אלרגיות</string>
    <string name="show_treatments">הצג טיפולים</string>	<string name="accept_option">אשר</string>
    <string name="accept_icon_descreption">[a]ccept</string>
    <string name="person_number">מספר פציינט:</string>
    <string name="person_sex">מין:</string>
    <string name="person_dob">תאריך לידה:</string>
    <string name="person_phone">טלפון:</string>
    <string name="person_email">אימייל:</string>
    <string name="person_service_class">רמת שירות:</string>
    <string name="menu_start_treatment">התחל טיפול</string>
    <string name="menu_doctor_details">פרטי רופא</string>
    <string name="doctor_doj">תאריך הצתרפות:</string>
    <string name="doctor_salary">משכורת:</string>
    <string name="doctor_specialization">התמחות:</string>
    <string name="space"> </string>
    
</resources>
